code25_all/scala/15794245.txt
$ sbt
[info] Loading project definition from /Users/antkong/wd/scala/recfun/project/project
[info] Loading project definition from /Users/antkong/wd/scala/recfun/project
[info] Set current project to progfun-recfun (in build file:/Users/antkong/wd/scala/recfun/)
> console
[info] Compiling 2 Scala sources to /Users/antkong/wd/scala/recfun/target/scala-2.10/classes...
[info] 'compiler-interface' not yet compiled for Scala 2.10.1. Compiling...
[info]   Compilation completed in 22.682 s
[info] Starting scala interpreter...
[info] 

def sq(x:Int)=>x*x
scala> def sq(x:Int)=> x*x
<console>:1: error: '=' expected but '=>' found.
       def sq(x:Int)=> x*x
                    ^

